add vehicles abstraction with test and demo; #3

--- a/staff/manuel-barzi/playground/calculator/package.json
+++ b/staff/manuel-barzi/playground/calculator/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "tsc *.ts --target esnext",
     "test": "node index.test.js",
-    "compile-test": "tsc --noEmit index.ts && tsx index.test.ts"
+    "compile-test": "tsc --noEmit index.ts && tsx index.test.ts",
+    "compile-test-inspect": "tsc --noEmit index.ts && tsx --inspect-brk index.test.ts"
   },
   "keywords": [],
   "author": "",
