--- a/staff/sergio-ocaña/playground/calculator/package.json
+++ b/staff/sergio-ocaña/playground/calculator/package.json
@@ -1,11 +1,12 @@
 {
   "name": "calculator",
   "version": "1.0.0",
-  "main": "calculate.js",
+  "main": "index.ts",
   "scripts": {
-    "build": "npx tsc calculate.ts",
-    "eval": "npx tsx calculate.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc *.ts --target esnext",
+    "eval": "npx tsx index.ts",
+    "test": "tsc --noEmit index.ts && tsx index.test.ts ",
+    "inspect": "tsc --noEmit index.ts && tsx --inspect-brk index.test.ts"
   },
   "keywords": [],
   "author": "",
