--- a/staff/manuel-barzi/playground/zzz/repository.1/package.json
+++ b/staff/manuel-barzi/playground/zzz/repository.1/package.json
@@ -12,7 +12,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^20.14.10",
-    "mongodb": "^6.8.0"
+    "@types/node": "^20.14.10"
   }
 }
