--- a/staff/sergio-ocaña/playground/repository/package.json
+++ b/staff/sergio-ocaña/playground/repository/package.json
@@ -5,13 +5,15 @@
   "type": "module",
   "scripts": {
     "test-FS": "tsc && tsx RepoFS.demo.ts",
-    "test-M": "tsc --noEmit && tsx RepoM.demo.ts"
+    "test-M": "tsc && tsx RepoM.demo.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/node": "^20.14.10"
+    "@types/node": "^20.14.10",
+    "mongodb": "^6.8.0"
   }
 }
